@@ -19,6 +19,7 @@ collections.
 - Transitions when opening and closing collections
 - Collection menu visibility now toggled via to clicks
 - Renamed "hidden" toggle to "excluded" to make its purpose clearer
+- Changed colour of excluded toggle to red, darkened excluded item icons
 - Renamed collection "Standard Armor" to "Armor"
 - Renamed collection "Standard Weapon" to "Weapons"
 - Moved Seasonal reputation board rewards to own sub-category
